--- a/frontend/src/app/components/pages/academico/asignacion-becas-descuentos/asignacion-becas-descuentos.component.html
+++ b/frontend/src/app/components/pages/academico/asignacion-becas-descuentos/asignacion-becas-descuentos.component.html
@@ -104,7 +104,7 @@
 					</div>
 				</div>
 				<div class="card-body">
-					<div class="table-responsive">
+					<div class="table-responsive table-scroll-5">
 						<table class="table table-sm table-hover align-middle">
 							<thead>
 								<tr>
