--- a/frontend/src/app/components/pages/cobros/kardex-modal/kardex-modal.component.html
+++ b/frontend/src/app/components/pages/cobros/kardex-modal/kardex-modal.component.html
@@ -82,28 +82,45 @@
 							<table class="table table-sm table-bordered align-middle">
 								<thead class="table-light">
 									<tr>
-										<th>Fecha</th>
-										<th>Nro Cobro</th>
+										<th>Tipo</th>
 										<th>Cuota</th>
+										<th>Pago</th>
 										<th>Monto</th>
-										<th>Forma</th>
+										<th>Factura</th>
+										<th>Recibo</th>
+										<th>Total</th>
+										<th>Fecha</th>
+										<th>Razón Social / NIT</th>
 										<th>Obs.</th>
 									</tr>
 								</thead>
 								<tbody>
-									<tr *ngFor="let m of (r?.cobros?.mensualidad?.items || [])">
-										<td>{{ m?.fecha_cobro | date:'yyyy-MM-dd' }}</td>
-										<td>{{ m?.nro_cobro }}</td>
-										<td>{{ m?.id_cuota ? ('Cuota ' + m?.id_cuota) : '-' }}</td>
-										<td>{{ m?.monto | number:'1.2-2' }}</td>
-										<td>{{ m?.id_forma_cobro }}</td>
-										<td>{{ m?.observaciones }}</td>
+									<tr *ngFor="let m of (r?.mensualidades?.pagadas || [])">
+										<td>{{ 'NORMAL' }}</td>
+										<td>{{ m?.numero_cuota || '1' }}</td>
+										<td>{{ '1' }}</td>
+										<td>
+											<ng-container [ngSwitch]="m?.estado_pago">
+												<ng-container *ngSwitchCase="'PARCIAL'">
+													{{ m?.monto_pagado | number:'1.0-0' }}
+												</ng-container>
+												<ng-container *ngSwitchDefault>
+													{{ m?.monto_pagado | number:'1.0-0' }}
+												</ng-container>
+											</ng-container>
+										</td>
+										<td>{{ m?.nro_factura || '-' }}</td>
+										<td>{{ m?.nro_recibo || '0' }}</td>
+										<td>{{ 'No' }}</td>
+										<td>{{ (m?.fecha_pago | date:'dd/MM/yyyy') || '-' }}</td>
+										<td>{{ r?.estudiante?.razon_social || (r?.estudiante?.ap_paterno + ' / ' + r?.estudiante?.ci) || '-' }}</td>
+										<td>{{ m?.observaciones || 'Efectivo:' }}</td>
 									</tr>
 								</tbody>
 								<tfoot>
 									<tr>
-										<th colspan="3" class="text-end">Total Pagado</th>
-										<th class="text-success">{{ r?.cobros?.mensualidad?.total | number:'1.2-2' }}</th>
+										<th colspan="8" class="text-end">Total Pagado</th>
+										<th class="text-success">{{ r?.cobros?.mensualidad?.total | number:'1.0-0' }}</th>
 										<th colspan="2"></th>
 									</tr>
 								</tfoot>
@@ -122,32 +139,90 @@
 							<table class="table table-sm table-bordered align-middle">
 								<thead class="table-light">
 									<tr>
+										<th>Tipo</th>
+										<th>Cuota</th>
+										<th>Monto</th>
+										<th>Dias Mora</th>
+										<th>Importe por Mora</th>
+										<th>Descuento en Mora</th>
+										<th>Monto Adeudado</th>
+										<th>Monto Acumulado</th>
+										<th>Fecha de vencimiento</th>
+										<th>Observaciones</th>
+									</tr>
+								</thead>
+								<tbody>
+									<ng-container *ngFor="let m of (r?.mensualidades?.adeudadas || []); let i = index">
+									<tr>
+										<td>{{ 'NORMAL' }}</td>
+										<td>{{ m?.numero_cuota || (i + 1) }}</td>
+										<td>
+											<ng-container [ngSwitch]="m?.estado_pago">
+												<ng-container *ngSwitchCase="'PARCIAL'">
+													<!-- Mostrar saldo restante para pagos parciales -->
+													{{ ((m?.monto || 0) - (m?.monto_pagado || 0)) | number:'1.0-0' }}
+												</ng-container>
+												<ng-container *ngSwitchDefault>
+													{{ m?.monto | number:'1.0-0' }}
+												</ng-container>
+											</ng-container>
+										</td>
+										<td>{{ calculateDaysOverdue(m?.fecha_vencimiento) }}</td>
+										<td>{{ calculateDaysOverdue(m?.fecha_vencimiento) > 0 ? calculateDaysOverdue(m?.fecha_vencimiento) : '0' }}</td>
+										<td>{{ '0' }}</td>
+										<td class="align-text-end">
+											<ng-container [ngSwitch]="m?.estado_pago">
+												<ng-container *ngSwitchCase="'PARCIAL'">
+													{{ ((m?.monto || 0) - (m?.monto_pagado || 0)) | number:'1.0-0' }}
+												</ng-container>
+												<ng-container *ngSwitchDefault>
+													{{ m?.monto | number:'1.0-0' }}
+												</ng-container>
+											</ng-container>
+										</td>
+										<td>{{ calculateCumulativeAmount(r?.mensualidades?.adeudadas, i) | number:'1.0-0' }}</td>
+										<td>{{ (m?.fecha_vencimiento | date:'yyyy-MM-dd') || '-' }}</td>
+										<td>{{ '' }}</td>
+									</tr>
+									</ng-container>
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</div>
+
+				<!-- Mensualidades Pendientes -->
+				<div class="card mb-4">
+					<div class="card-header bg-warning text-white">
+						<h6 class="mb-0">Mensualidades no vencidas</h6>
+					</div>
+					<div class="card-body">
+						<div class="table-responsive">
+							<table class="table table-sm table-bordered align-middle">
+								<thead class="table-light">
+									<tr>
 										<th>Cuota</th>
 										<th>Vencimiento</th>
 										<th>Monto</th>
 										<th>Estado</th>
-										<th>Días Mora</th>
+										<th>Días hasta vencimiento</th>
 									</tr>
 								</thead>
 								<tbody>
-									<tr *ngFor="let m of (r?.mensualidades_adeudadas || [])">
-										<td>{{ m?.id_cuota ? ('Cuota ' + m?.id_cuota) : '-' }}</td>
-										<!-- <td>{{ m?.fecha_vencimiento | date:'yyyy-MM-dd' || '-' }}</td> -->
-										<td></td>
-										<td class="text-danger">{{ m?.monto | number:'1.2-2' }}</td>
+									<tr *ngFor="let m of (r?.mensualidades?.pendientes || [])">
+										<td>{{ m?.numero_cuota ? ('Cuota ' + m?.numero_cuota) : '-' }}</td>
+										<td>{{ (m?.fecha_vencimiento | date:'yyyy-MM-dd') || '-' }}</td>
+										<td>{{ m?.monto | number:'1.2-2' }}</td>
 										<td>
-											<span class="badge bg-danger">Pendiente</span>
+											<span class="badge bg-warning">Pendiente</span>
 										</td>
-										<td>
-											<span class="text-danger">{{ m?.dias_mora || 0 }} días</span>
-										</td>
+										<td>{{ '-' }}</td>
 									</tr>
 								</tbody>
 								<tfoot>
 									<tr>
-										<th colspan="2" class="text-end">Total Adeudado</th>
-										<!-- <th class="text-danger">{{ (r?.mensualidades_adeudadas | sum:'monto') || r?.totales?.saldo_mensualidad | number:'1.2-2' }}</th> -->
-										<th></th>
+										<th colspan="2" class="text-end">Total Pendiente</th>
+										<th class="text-warning">{{ '-' }}</th>
 										<th colspan="2"></th>
 									</tr>
 								</tfoot>
