ya se integro correctamente en cobros los descuentos

--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -175,12 +175,12 @@
 
 										<!-- P/U -->
 										<td class="text-end">
-											<span class="d-block">{{ calcRowSubtotal(i) | number:'1.2-2' }}</span>
+											<span class="d-block">{{ getRowDisplayPU(i) | number:'1.2-2' }}</span>
 										</td>
 
 										<!-- Descuento -->
 										<td class="text-end">
-											<span class="d-block">{{ (pg.get('descuento')?.value || 0) | number:'1.2-2' }}</span>
+											<span class="d-block">{{ getRowDisplayDescuento(i) | number:'1.2-2' }}</span>
 										</td>
 
 										<!-- Sub total (solo lectura) -->
